style.css
body {
  background-color: rgb(13,7,30);
}

.header {
  background-color: #1e1e1e;
}


.jumbotron {
  background-image: url("https://pacdn.500px.org/1528897/14329cd495d2a55ed949a0b9bd0481527e915c20/cover_2048.jpg?3");
  background-size: cover;
  height: 800px;
}

.jumbotron h1 {
  position: center;
  font-family: monospace;
  font-size: 4em;
}

.navigation {
  text-align: center;
}

.navigation li {
  color: #3fabf5;
  display: inline-block;
  font-family: monospace;
  font-size: 1.5em;
  font-weight: normal;
  font-style: normal;
  border: 1px solid #ab61fc;
  border-radius:2px;
  padding: 20px;
  margin: 20px;
}

.main h1 {
  position: relative;
  top: 180px;
  text-align: centre;
}

.btn-main {
  background-color: #3fabf5;
  color: #fff;
  font-family: monospace, sans-serif;
  font-weight: 600;
  font-size: 18px;
  letter-spacing: 1.3px;
  padding: 16px 40px;
  text-decoration: none;
  text-transform: uppercase;
}

